--- a/pages/features-post-create-santri.html
+++ b/pages/features-post-create-santri.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no" name="viewport">
-  <title>Create Santri &mdash; Stisla</title>
+  <title>Create Santri &mdash; S3M</title>
 
   <!-- General CSS Files -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -56,8 +56,8 @@
               <li class="menu-header">Menu</li>
               
               <li><a class="nav-link" href="santri-data.html"><i class="fas fa-table"></i> <span>Santri Data</span></a></li>
-              <li><a class="nav-link" href="skill-data.html"><i class="fas fa-laptop-code"></i> <span>Skill Data</span></a></li>
-              <li><a class="nav-link" href="users-data.html"><i class="fas fa-users"></i> <span>Users Data</span></a></li>
+              <li><a class="nav-link" href="skill-data.html"><i class="fas fa-laptop-code"></i> <span>Skill</span></a></li>
+              <li><a class="nav-link" href="users-data.html"><i class="fas fa-users"></i> <span>Users</span></a></li>
             </ul>
         </aside>
       </div>
