--- a/pages/features-profile-users.html
+++ b/pages/features-profile-users.html
@@ -3,13 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no" name="viewport">
-  <title>Skill Data &mdash; S3M</title>
+  <title>Profile &mdash; S3M</title>
 
   <!-- General CSS Files -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 
   <!-- CSS Libraries -->
+  <link rel="stylesheet" href="../node_modules/bootstrap-social/bootstrap-social.css">
+  <link rel="stylesheet" href="../node_modules/summernote/dist/summernote-bs4.css">
 
   <!-- Template CSS -->
   <link rel="stylesheet" href="../assets/css/style.css">
@@ -52,7 +54,7 @@
               <li><a class="nav-link" href="index.html"><i class="fas fa-home"></i> <span>Home</span></a></li>
               <li class="menu-header">Menu</li>
               <li><a class="nav-link" href="santri-data.html"><i class="fas fa-table"></i> <span>Santri Data</span></a></li>
-              <li class="active"><a class="nav-link" href="skill-data.html"><i class="fas fa-laptop-code"></i> <span>Skill</span></a></li>
+              <li><a class="nav-link" href="skill-data.html"><i class="fas fa-laptop-code"></i> <span>Skill</span></a></li>
               <li><a class="nav-link" href="users-data.html"><i class="fas fa-users"></i> <span>Users</span></a></li>
             </ul>
         </aside>
@@ -62,47 +64,62 @@
       <div class="main-content">
         <section class="section">
           <div class="section-header">
-            <h1>Skill Data</h1>
-            <div class="section-header-button">
-              <a href="features-post-create-skill.html" class="btn btn-primary">Add New</a>
+            <h1>Users Profile</h1>
+            <div class="section-header-breadcrumb">
+              <div class="breadcrumb-item active"><a href="#">Users</a></div>
+              <div class="breadcrumb-item">Users Profile</div>
             </div>
           </div>
-
           <div class="section-body">
-            <div class="card-body p-0">
-              <div class="table-responsive">
-                <table class="table table-striped table-md">
-                  <tr>
-                    <th>Id</th>
-                    <th>Skill</th>
-                    <th>Action</th>
-                  </tr>
-                  <tr>
-                    <td>1</td>
-                    <td>PHP</td>
-                    <td><a href="features-profile-skill.html" class="btn btn-success mr-1">Edit</a><a href="#" class="btn btn-danger">Delete</a></td>
-                  </tr>
-                  <tr>
-                    <td>2</td>
-                    <td>Javascript</td>
-                    <td><a href="features-profile-skill.html" class="btn btn-success mr-1">Edit</a><a href="#" class="btn btn-danger">Delete</a></td>
-                  </tr>
-                  <tr>
-                    <td>3</td>
-                    <td>Python</td>
-                    <td><a href="features-profile-skill.html" class="btn btn-success mr-1">Edit</a><a href="#" class="btn btn-danger">Delete</a></td>
-                  </tr>
-                  <tr>
-                    <td>4</td>
-                    <td>C++</td>
-                    <td><a href="features-profile-skill.html" class="btn btn-success mr-1">Edit</a><a href="#" class="btn btn-danger">Delete</a></td>
-                  </tr>
-                  <tr>
-                    <td>5</td>
-                    <td>HTML</td>
-                    <td><a href="features-profile-skill.html" class="btn btn-success mr-1">Edit</a><a href="#" class="btn btn-danger">Delete</a></td>
-                  </tr>
-                </table>
+            <h2 class="section-title">Hi, Admin!</h2>
+            <p class="section-lead">
+              Change information about this data on this page.
+            </p>
+
+            <div class="row mt-sm-4">
+              <div class="col-12 col-md-12 col-lg-7">
+                <div class="card">
+                  <form method="post" class="needs-validation" novalidate="">
+                    <div class="card-header">
+                      <h4>Edit Users Profile</h4>
+                    </div>
+                    <div class="card-body">
+                        <div class="row">
+                          <div class="form-group col-md-10 col-12">
+                            <label>Name</label>
+                            <input type="text" class="form-control" value="Irwansyah Saputra" required="">
+                            <div class="invalid-feedback">
+                              Please fill in the name
+                            </div>
+                          </div>
+                        </div>
+                        <div class="row">
+                          <div class="form-group col-md-10 col-12">
+                            <label>Username</label>
+                            <input type="text" class="form-control" value="ear_one" required="">
+                            <div class="invalid-feedback">
+                              Please fill in the email
+                            </div>
+                          </div>
+                        </div>
+                        <div class="row">
+                          <div class="form-group col-md-10 col-12">
+                            <label class="mr-2">Role</label>
+                            <select class="form-control selectric">
+                              <option value="">1. Admin</option>
+                              <option value="">2. Pengurus</option>
+                            </select>
+                            <div class="invalid-feedback">
+                              Please fill in the name
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="card-footer text-right">
+                        <button class="btn btn-primary">Save Changes</button>
+                      </div>
+                  </form>
+                </div>
               </div>
             </div>
           </div>
@@ -128,6 +145,7 @@
   <script src="../assets/js/stisla.js"></script>
 
   <!-- JS Libraies -->
+  <script src="../node_modules/summernote/dist/summernote-bs4.js"></script>
 
   <!-- Template JS File -->
   <script src="../assets/js/scripts.js"></script>
