--- a/pages/index.html
+++ b/pages/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no" name="viewport">
-  <title>Home &mdash; Stisla</title>
+  <title>Home &mdash; S3M</title>
 
   <!-- General CSS Files -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -52,8 +52,8 @@
               <li class="active"><a class="nav-link" href="index.html"><i class="fas fa-home"></i> <span>Home</span></a></li>
               <li class="menu-header">Menu</li>
               <li><a class="nav-link" href="santri-data.html"><i class="fas fa-table"></i> <span>Santri Data</span></a></li>
-              <li><a class="nav-link" href="skill-data.html"><i class="fas fa-laptop-code"></i> <span>Skill Data</span></a></li>
-              <li><a class="nav-link" href="users-data.html"><i class="fas fa-users"></i> <span>Users Data</span></a></li>
+              <li><a class="nav-link" href="skill-data.html"><i class="fas fa-laptop-code"></i> <span>Skill</span></a></li>
+              <li><a class="nav-link" href="users-data.html"><i class="fas fa-users"></i> <span>Users</span></a></li>
             </ul>
         </aside>
       </div>
@@ -66,7 +66,7 @@
           </div>
 
           <div class="section-body">
-            <h2 class="section-title">Welcome to Sun-3 Management app site</h2>
+            <h2 class="section-title">Welcome to Sun-3 Management app</h2>
             <p class="section-lead">Makes it easy for you to manage your santri data.</p>
             <div class="card">
               <div class="card-header">
