--- a/pages/users-data.html
+++ b/pages/users-data.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no" name="viewport">
-  <title>Users Data &mdash; Stisla</title>
+  <title>Users Data &mdash; S3M</title>
 
   <!-- General CSS Files -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -52,8 +52,8 @@
               <li><a class="nav-link" href="index.html"><i class="fas fa-home"></i> <span>Home</span></a></li>
               <li class="menu-header">menu</li>
               <li><a class="nav-link" href="santri-data.html"><i class="fas fa-table"></i> <span>Santri Data</span></a></li>
-              <li><a class="nav-link" href="skill-data.html"><i class="fas fa-laptop-code"></i> <span>Skill Data</span></a></li>
-              <li class="active"><a class="nav-link" href="users-data.html"><i class="fas fa-users"></i> <span>Users Data</span></a></li>
+              <li><a class="nav-link" href="skill-data.html"><i class="fas fa-laptop-code"></i> <span>Skill</span></a></li>
+              <li class="active"><a class="nav-link" href="users-data.html"><i class="fas fa-users"></i> <span>Users</span></a></li>
             </ul>
         </aside>
       </div>
@@ -84,35 +84,35 @@
                     <td>Irwansyah Saputra</td>
                     <td>ear_one</td>
                     <td>Pengurus</td>
-                    <td><a href="#" class="btn btn-danger">Delete</a></td>
+                    <td><a href="features-profile-users.html" class="btn btn-success mr-1">Edit</a><a href="#" class="btn btn-danger">Delete</a></td>
                   </tr>
                   <tr>
                     <td>2</td>
                     <td>Hasan Basri</td>
                     <td>h_sun</td>
                     <td>pengurus</td>
-                    <td><a href="#" class="btn btn-danger">Delete</a></td>
+                    <td><a href="features-profile-users.html" class="btn btn-success mr-1">Edit</a><a href="#" class="btn btn-danger">Delete</a></td>
                   </tr>
                   <tr>
                     <td>3</td>
                     <td>Kusnadi</td>
                     <td>cause_nut_die</td>
                     <td>Admin</td>
-                    <td><a href="#" class="btn btn-danger">Delete</a></td>
+                    <td><a href="features-profile-users.html" class="btn btn-success mr-1">Edit</a><a href="#" class="btn btn-danger">Delete</a></td>
                   </tr>
                   <tr>
                     <td>4</td>
                     <td>Rizal Fakhri</td>
                     <td>zakhri</td>
                     <td>Admin</td>
-                    <td><a href="#" class="btn btn-danger">Delete</a></td>
+                    <td><a href="features-profile-users.html" class="btn btn-success mr-1">Edit</a><a href="#" class="btn btn-danger">Delete</a></td>
                   </tr>
                   <tr>
                     <td>5</td>
                     <td>Isnap Kiswandi</td>
                     <td>one_die</td>
                     <td>Pengurus</td>
-                    <td><a href="#" class="btn btn-danger">Delete</a></td>
+                    <td><a href="features-profile-users.html" class="btn btn-success mr-1">Edit</a><a href="#" class="btn btn-danger">Delete</a></td>
                   </tr>
                 </table>
               </div>
