--- a/pages/features-post-create-skill.html
+++ b/pages/features-post-create-skill.html
@@ -89,6 +89,12 @@
                   </div>
                   <div class="card-body">
                     <div class="form-group row mb-4">
+                      <label class="col-form-label text-md-right col-12 col-md-3 col-lg-3">Id</label>
+                      <div class="col-sm-12 col-md-7">
+                        <input type="number" class="form-control">
+                      </div>
+                    </div>
+                    <div class="form-group row mb-4">
                       <label class="col-form-label text-md-right col-12 col-md-3 col-lg-3">Skill</label>
                       <div class="col-sm-12 col-md-7">
                         <input type="text" class="form-control">
