--- a/pages/features-post-create-santri.html
+++ b/pages/features-post-create-santri.html
@@ -99,9 +99,9 @@
                       <label class="col-form-label text-md-right col-12 col-md-3 col-lg-3">Skill</label>
                       <div class="col-sm-12 col-md-7">
                         <select class="form-control selectric">
-                          <option>1</option>
-                          <option>2</option>
-                          <option>3</option>
+                          <option>PHP</option>
+                          <option>Javascript</option>
+                          <option>Phyton</option>
                         </select>
                       </div>
                     </div>
